--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <h1>List of Pokemon</h1>
 
-    
     <script src="js/scripts.js"></script>
   </body>
 </html>
