--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>List of Pokemon</h1>
-
+    <div class="pokedex">
+      <h1>Pokedex</h1>
+      <ul class="pokemon-list"></ul>
+    </div> <!-- end pokedex -->
     <script src="js/scripts.js"></script>
   </body>
 </html>
