--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
       <h1>Pokedex</h1>
       <ul class="pokemon-list"></ul>
     </div> <!-- end pokedex -->
+
+    <!-- lets older browsers use promises -->
+    <script src="js/promise-polyfill.js"></script>
+
+    <!-- lets older browsers use fetch -->
+    <script src="js/fetch-polyfill.js"></script>
+
     <script src="js/scripts.js"></script>
   </body>
 </html>
