addListItem changed to jquery

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="row">
               <div class="col-4"></div>
             <form class="form-horizontal">
-              <div class="control-group form-inline text-right">
+              <div class="control-group form-inline text">
                 <label class="control-label col-1" for="search-bar">Search</label>
                 <div class="controls">
                   <input class="form-control mr-sm-2" id="search-bar" type="search" name="search" value="" aria-label="search">
