--- a/index.html
+++ b/index.html
@@ -12,27 +12,14 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="headImg">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a href="index.html" class="logo">
+            <img src="img/pokemon.png" class="logo img-fluid" alt="Pokemon Logo">
+          </a>
 
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Pokedex <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-          </ul>
-        </div>
-        <div class="headImg">
-          <img src="img/pokemon.png" class="logo" alt="Pokemon Logo">
-        </div>
-      </nav>
-
-
+        </nav>
+      </div>
     </header>
     <div class="container-fluid">
       <div class="row">
