--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               Pokedex
             </h1>
             <div class="row">
-              <div class="col-4"></div>
+
             <form class="form-horizontal">
               <div class="control-group form-inline text">
                 <label class="control-label col-1" for="search-bar">Search</label>
@@ -70,6 +70,7 @@
             <button
               type="button"
               class="close"
+              id="close"
               data-dismiss="modal"
               aria-label="Close"
             >
