--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1 class="display-4">
               Pokedex
             </h1>
-            <div class="row">
+            <div class="row search">
 
             <form class="form-horizontal">
               <div class="control-group form-inline text">
