--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="src/css/styles.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -15,7 +15,7 @@
       <div class="headImg">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <a href="index.html" class="logo">
-            <img src="img/pokemon.png" class="logo img-fluid" alt="Pokemon Logo">
+            <img src="src/img/pokemon.png" class="logo img-fluid" alt="Pokemon Logo">
           </a>
 
         </nav>
@@ -84,15 +84,15 @@
     </div>
 
     <!-- lets older browsers use promises -->
-    <script src="js/promise-polyfill.js"></script>
+    <script src="src/js/promise-polyfill.js"></script>
 
     <!-- lets older browsers use fetch -->
-    <script src="js/fetch-polyfill.js"></script>
+    <script src="src/js/fetch-polyfill.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-    <script src="js/scripts.js"></script>
+    <script src="dis/scripts.js"></script>
   </body>
 </html>
