changed search format

--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
 
   <body>
     <header>
-      <div class="headImg">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a href="index.html" class="logo">
-            <img src="src/img/pokemon.png" class="logo img-fluid" alt="Pokemon Logo">
-          </a>
-
-        </nav>
-      </div>
+      
     </header>
     <div class="container-fluid">
       <div class="row">
@@ -34,9 +27,9 @@
 
             <form class="form-horizontal">
               <div class="control-group form-inline text">
-                <label class="control-label col-1" for="search-bar">Search</label>
+                <!-- <label class="control-label col-1" for="search-bar">Search</label> -->
                 <div class="controls">
-                  <input class="form-control mr-sm-2" id="search-bar" type="search" name="search" value="" aria-label="search">
+                  <input class="form-control " id="search-bar" type="search" placeholder="Search..." name="search" value="" aria-label="search">
                 </div>
               </div>
             </form>
