add background image

--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
           </div>
           <div class="pokedex-window">
             <div class="pokedex-window-scrollbox" id="pokedex">
-
+              <div class="card" id="card" style="width: 18rem;">
+                <img class="card-img-top" src="" alt="Pokemon image">
+                <div class="card-body">
+                  <h2 class="card-title">pokemon Name</h2>
+                  <p class="card-text">body text</p>
+                </div>
+              </div> <!-- end of card -->
               <ul class="pokemon-list list-group"></ul>
               <div id="overlay"></div>
             </div>
@@ -51,13 +57,7 @@
 
  
   
-  <div class="card" id="card" style="width: 18rem; display: none;">
-    <img class="card-img-top" src="" alt="Pokemon image">
-    <div class="card-body">
-      <h2 class="card-title">pokemon Name</h2>
-      <p class="card-text">body text</p>
-    </div>
-  </div>
+
   
     <!-- Modal -->
     <!-- <div
