--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
           </div>
           <div class="pokedex-window">
             <div class="pokedex-window-scrollbox" id="pokedex">
-              <div class="card" id="card" style="width: 18rem;">
-                <img class="card-img-top" src="" alt="Pokemon image">
-                <div class="card-body">
-                  <h2 class="card-title">pokemon Name</h2>
-                  <p class="card-text">body text</p>
-                </div>
-              </div> <!-- end of card -->
+              <!-- <div class="card" id="card" style="width: 18rem;">
+                <img class="card-img-top" src="" alt="Pokemon image"> -->
+                <!-- <div class="card-body"> -->
+                  <!-- <h2 class="card-title">pokemon Name</h2>
+                  <p class="card-text">body text</p> -->
+                <!-- </div>
+              </div> end of card --> 
               <ul class="pokemon-list list-group"></ul>
               <div id="overlay"></div>
             </div>
@@ -60,7 +60,7 @@
 
   
     <!-- Modal -->
-    <!-- <div
+    <div
       class="modal fade"
       id="modal"
       tabindex="-1"
@@ -82,12 +82,12 @@
             >
               <span aria-hidden="true">&times;</span>
             </button>
-          </div>  end of header -->
-          <!-- <div class="modal-body"> -->
-          <!-- </div> -->
-        <!-- </div> end of modal-content -->
-      <!-- </div> end of modal-dialog -->
-     <!-- </div> end of Modal --> 
+          </div> <!-- end of header -->
+          <div class="modal-body">
+          </div>
+        </div> <!--  end of modal-content -->
+       </div> <!-- end of modal-dialog -->
+      </div> <!-- end of Modal -->
 
     <!-- lets older browsers use promises -->
     <script src="src/js/promise-polyfill.js"></script>
@@ -101,8 +101,8 @@
             
     <script src="dis/scripts.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
   </body>
 </html>
