--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="sort">
                       <form name="sortOptions">
                         <p>Sort By: </p>
-                        <input type="radio" id="alpha" name="sort" value="alpha" class="radio" onclick="pokemonRepo.sortPokemon(this.value);">
+                        <input type="radio" id="alpha" name="sort" value="alpha" class="radio" onclick="pokemonRepo.sortPokemon(this.value)">
                         <label for="type">Alpha</label>
                         
                         <input type="radio" id="number" name="sort" value="number" class="radio" checked onclick="pokemonRepo.sortPokemon(this.value);">
